example/cnpg/netpol.yaml
# Use these if you need to reach other ports on the cluster than the ones available on the pooler
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-example-testing-eg
  namespace: basseng
spec:
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: basseng
      podSelector:
        matchLabels:
          cnpg.io/cluster: cnpg-example
  podSelector:
    matchLabels:
      app: debug-cnpg
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-example-testing-in
  namespace: basseng
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: basseng
      podSelector:
        matchLabels:
          app: debug-cnpg
  podSelector:
    matchLabels:
      cnpg.io/cluster: cnpg-example
  policyTypes:
  - Ingress
